<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:ignore="UselessParent">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/okraje"
            android:shrinkColumns="0,1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/incidentEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/zadej_incident"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="48dp"
                    tools:ignore="LabelFor" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pracoviste" />

                <TextView
                    android:id="@+id/pracovisteTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/zakazka" />

                <TextView
                    android:id="@+id/zakazkaTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/komponentaEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/zadej_komponenta"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="48dp"
                    tools:ignore="LabelFor" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/nefunkcniKusyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nefunkcni_kusy" />

                <EditText
                    android:id="@+id/pocetNefunknichKusuEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/pocet_nefunkcnich_kusu"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:minHeight="48dp"
                    android:minLines="2"
                    android:singleLine="false"
                    tools:ignore="LabelFor" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/oblastTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/oblast" />

                <Spinner
                    android:id="@+id/oblastSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/popisVadyEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/zadej_popis_vady"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:minLines="5"
                    tools:ignore="LabelFor" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/zdrojVadySwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    app:showText="true"
                    android:text="@string/zdroj_vady"
                    android:textOff="@string/externi"
                    android:textOn="@string/interni" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <AutoCompleteTextView
                    android:id="@+id/dodavatelAutoCompleteText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/zadej_dodavatele"
                    android:minHeight="48dp"
                    tools:ignore="LabelFor" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/znackaDodavateleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/znacka_dodavatele" />

                <EditText
                    android:id="@+id/znackaDodavateleEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/zadej_znacku_dodavatele"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="48dp"
                    tools:ignore="LabelFor" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/charakterVadyTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/charakter_vady" />

                <Spinner
                    android:id="@+id/charakterVadySpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/druhVadyTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/druh_vady" />

                <Spinner
                    android:id="@+id/druhVadySpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/zrusitButton"
                    style="@style/TextAppearance.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zrusit" />

                <Button
                    android:id="@+id/pokracovatBbutton"
                    style="@style/TextAppearance.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pokracovat" />
            </TableRow>

        </TableLayout>
    </ScrollView>
</LinearLayout>