<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/okraje"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/noveChybovkoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nove_chybovko"
        android:textSize="@dimen/text_velikost"
        app:layout_constraintLeft_toLeftOf="@id/guidelineVertical"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical" />

    <Button
        android:id="@+id/nactiChybovkoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nacti_chybovko"
        android:textSize="@dimen/text_velikost"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/guidelineVertical" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/textView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/nadpis_velikost"
        android:text="@string/seznam_chybovek" />

    <androidx.recyclerview.widget.RecyclerView
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        android:layout_height="0dp"
        android:layout_width="0dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>